--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -4,10 +4,10 @@
 <form>
 
   <label>First Name:</label>
-    <input type="text" name="first_name" placeholder="First Name:">
+    <input type="text" id="first_name" placeholder="First Name:">
 
   <label>Last Name:</label>
-      <input type="text" name="last_name" placeholder="Last Name:">
+      <input type="text" id="last_name" placeholder="Last Name:">
 
 <input type="submit" value="Submit Student">
 
