--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,7 +1,8 @@
 <!-- Create your form here -->
 
 <h3>Student Form</h3>
-<form>
+
+<%= form_tag students_path do %>
 
   <label>First Name:</label>
     <input type="text" name="first_name" placeholder="First Name:">
